--- a/springsecurity-simple-factory-auth/pom.xml
+++ b/springsecurity-simple-factory-auth/pom.xml
@@ -63,6 +63,15 @@
 			<version>1.18.22</version>
 			<optional>true</optional>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
