--- a/springsecurity-simple-factory-auth/src/main/resources/application.properties
+++ b/springsecurity-simple-factory-auth/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+#http://localhost:8080/sign-up    rejestracja usera
+#http://localhost:8080/hello      uruchomienie strony startowej
+
 server.port=8080
 #server.servlet.context-path=/api/v1
 #app.name=Employee Management Application
