--- a/springsecurity-simple-factory-auth/src/main/resources/application.properties
+++ b/springsecurity-simple-factory-auth/src/main/resources/application.properties
@@ -35,12 +35,14 @@ spring.jpa.properties.hibernate.format_sql=true
 #@EnableSwagger2   przyk?adowe wywo?anie //http://localhost:8080/api/v1/swagger-ui.html
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
-#Mail
-spring.mail.host=smtp.gmail.com
-spring.mail.username=j4sysiak
-spring.mail.password=Warszawa5584#
+
+
+#Mail:  dostawca https://mailtrap.io/inboxes
+spring.mail.host=smtp.mailtrap.io
+spring.mail.username=fb3b071d3792ca
+spring.mail.password=
 spring.mail.properties.mail.transport.protocol=smtp
-spring.mail.properties.mail.smtp.port=587
+spring.mail.properties.mail.smtp.port=465
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
