--- a/springsecurity-simple-factory-auth/src/main/resources/application.properties
+++ b/springsecurity-simple-factory-auth/src/main/resources/application.properties
@@ -23,8 +23,8 @@ spring.datasource.password=
 
 #mysql
 #spring.datasource.url=jdbc:mysql://localhost:3306/springdatajpa5?useSSL=false&serverTimezone=UTC
-#spring.datasource.username=root
-#spring.datasource.password=Warszawa5584
+#spring.datasource.username=
+#spring.datasource.password=
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect  - nie w??czaj  tego dla MySQL bo i tak nie chodzi
 
 spring.jpa.hibernate.ddl-auto=create
@@ -39,7 +39,7 @@ spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
 #Mail:  dostawca https://mailtrap.io/inboxes
 spring.mail.host=smtp.mailtrap.io
-spring.mail.username=fb3b071d3792ca
+spring.mail.username=
 spring.mail.password=
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.port=465
